# advanced-python-cli

./: README.md  lab.md  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
blkpy/: main.py
examples/: framework.py  simple.py
examples/1-subcommands/blkpy/: util.py
examples/2-complex/blkpy/: main.py
examples/3-envvars/blkpy/: main.py
examples/5-setuptools/blkpy/: util.py
examples/7-file-logs/blkpy/: main.py  util.py
examples/8-error-handling/: setup.py
examples/8-error-handling/blkpy/: util.py
resources/: packaging.md
